--- a/In-class_Ex/In-class_Ex01/In-class_Ex01.qmd
+++ b/In-class_Ex/In-class_Ex01/In-class_Ex01.qmd
@@ -20,10 +20,7 @@ format:
 
 ![](Images/placeholder.PNG){fig-align="center" width="287"}
 
-# 1 Getting Started
-
-::: panel-tabset
-## Installing and loading libraries
+# 1 Installing and loading libraries
 
 In this hands-on exercise, two R packages will be used. They are:
 
@@ -38,7 +35,7 @@ The code chunk below uses `p_load()` of [pacman](https://rpubs.com/akshaypatanka
 pacman::p_load(tidyverse, haven)
 ```
 
-## Importing PISA Data
+# 2 Importing PISA Data
 
 The code chunk below imports PISA data into R environment by using [`read_sas()`](https://haven.tidyverse.org/reference/read_sas.html) function of [**haven**](https://haven.tidyverse.org/) package.
 
@@ -70,9 +67,9 @@ write_rds(stu_qqq_SG, "data/stu_qqq_SG.rds")
 stu_qqq_SG <- read_rds("data/stu_qqq_SG.rds")
 ```
 
-## Understanding the Data
+# 3 Understanding the Data
 
 ```{r}
 #summary(stu_qqq_SG)
 ```
-:::
+
